vlib/v/checker/tests/arrow_op_wrong_left_type_err_b.vv
fn main() {
	ch := chan string{}
	mut obj := 9
	obj = <-ch
	_ = obj
}
